--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -17,9 +17,9 @@
   top: 0;
 }
 
-.home-page .page {
+/* .home-page .page {
   min-height: 101vh;
-}
+} */
 
 /* .animation-container {
   opacity: 0;
